# MMDSearcher

./: .gitignore  MMDSearch.py  README.md  database.db  database_meta.json  pyproject.toml
assets/ui/: search_page.ui
src/: exceptions.py  pre_lunch.py
src/backend/: api.py
src/backend/service/: home_service.py
src/backend/types/: apifox.py
src/common/: db_version_manager.py
src/common/crawler/: baidu_translate.py  items.py  mmd_archive_spider.py  pipelines.py
src/common/database/: curd.py  model.py  service.py  session.py
src/component/: cmd_text_edit.py  loading_mask.py
src/core/: config.py  datacls.py  enums.py  paths.py  settings.py
src/utils/: time_manager.py
web/: package-lock.json  package.json
web/public/: index.html
web/src/: App.vue  main.js
web/src/apis/: api.js  xxx.json
web/src/components/Home/: HomeCard.vue  HomeMain.vue
web/src/components/Second/: Second.vue
web/src/router/: index.js
web/src/views/: HomeView.vue
